--- to do
focal for multi-layer objects
support for RasterQuad (4 dimensional) objects
add equivalent to "subsWithNA" to reclassify

--- development version
new function 'select' for selecting spatial subsets by drawing on plot (map)
new function 'barplot' for RasterLayer objects
new function 'scale' for Raster* objects
new functions to coerce to and from big.matrix objects: as(x, 'big.matrix') and raster(x) or brick(x)
raster now uses 'igraph' instead of 'igraph0' (functions gridDistance and clump)
renamed function 'compare' to 'compareRaster' (to avoid name hiding by the igraph package)
renamed function 'expand' to 'extend' (to avoid name hiding by the Matrix package)
functions setOptions, showOptions, saveOptions, and clearOptions have been replaced by new function "rasterOptions"
incorporated function 'count' into 'freq' (via the 'value' argument) and 'count' is now hidden as '.count' (to avoid name hiding of count by the plyr package)
new argument 'alignOnly' to projectRaster
new option 'setStatistics=FALSE' for writing to some GDAL files (geoTiff in particular) to suppress writing band statistics (min, max, mean, sd). This is currently not documented. When TRUE, all statistics are written when all the values are in memory, but only min and max are written in other cases, leading to problems in QGIS (reported by Agustin Lobo)
Added argument "gridded=TRUE" for plot(RasterLayer, RasterLayer), to show counts for intervals (suggested by Agustin Lobo)
Fixed bug in sampleRandom with "rowcol=TRUE" (reported by Agustin Lobo)
Fixed bug with RAT tables in native format (reported by Joseph Steward)
Added big.matrix as a "driver" (file format). This is experimental (and not documented).
raster now attempts to interpret the CRS from netcdf files

--- 1-September-2012, version 2.0-12
fixed bug in summary reported by Agustin Lobo
fixed bug in terrain/flowdir reported by Marie Morfin